
version 0.75cvs :
	* WYSIWYG text input
	* Yahoo! file transfer (Tim Ringenbach)
	* Yahoo! chat joining fixes (Tim Ringenbach)
	* Improved i18n support for MSN email notification (Felipe Contreras)
	* Jabber SASL PLAIN support
	* Touch-up various dialogs to follow the Gnome Human Interface
	  Guidelines more closely (Steven Garrity, Nathan Fredrickson, and
	  Ka-Hing Cheung)
	* Chinese (Simplified) translation updated (Funda Wang)
	* Chinese (Traditional) translation updated (Ambrose C. Li)
	* English (British) translation re-added (Luke Ross (lukeross))
	* Finnish translation updated (Arto Alakulju)
	* French translation updated (Eric Boumaour)
	* Italian translation updated (Claudio Satriano)
	* Portuguese (Brazilian) translation updated (Mauricio de Lemos
	  Rodrigues Collares Neto)
	* Romanian translation updated (Misu Moldovan (dumol))
	* Serbian translation updated (Danilo Segan)
	* Serbian Latin translation updated (Danilo Segan)
	* Swedish translation updated (Tore Lundqvist (luntor))
	* Vietnamese translation updated (T.M.Thanh)

version 0.74 (11/25/2003):
	* Sort-by-size log sorting fix
	* Log directory umask fix for users of gaim-remote
	* Fix Jabber room creation on MUC servers.
	* Vietnamese translation added (T.M.Thanh)

version 0.73 (11/21/2003):
	* New Logging format and code:
		* fixes i18n issues with logs
		* compatible with old logs
		* hopefully fixes segfault in viewing logs
	* New disconnected account dialog (Thanks, Daniel Atallah)
	* Fixes several Jabber bugs
	* Fixes the bug where some dialogs would crash when spell checking was
	  enabled. Closes #827930.
	* Fixed unblocking of users in MSN (Robert Mibus)
	* Fixes outgoing mobile pages on MSN.
	* The border on the close buttons on inactive tabs are no longer shown,
	  thanks to a fix used by Galeon.
	* Compatible with autoconf 2.58.
	* Cleaned up gtkspell-related code (Robert McQueen)
	* Changed the parameters for the received-chat-msg signal.
	* Added a Release Notification plugin